--- a/task-03.html
+++ b/task-03.html
@@ -6,12 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Задание 3</title>
     <style>
-      body {
+     body {
         font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
           Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
         background-color: #fff;
         color: #424242;
         line-height: 1.5;
+      }
+      img {
+        display: block;
+        max-width: 100%;
+        height: auto;
+      }
+      #gallery {
+        display: flex;
       }
     </style>
   </head>
