--- a/task-03.html
+++ b/task-03.html
@@ -20,6 +20,11 @@
       }
       #gallery {
         display: flex;
+        flex-wrap: wrap;
+        list-style: none;
+      }
+      li {
+        flex-basis: 33%;
       }
     </style>
   </head>
